Added more styling, none of it done yet.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,300,700" rel="stylesheet" type="text/css">
     <title>Lasse Bjerre | Portfolio</title>
 </head>
 <body>
 
     <div class="main-container">
-        <header class="header">
+        <header>
             <nav>
                 <ul class="nav-links">
                     <li><a href="#">Home</a></li>
@@ -28,7 +28,7 @@
             </div>
         </header>
 
-        <div class="projects-container">
+        <div id="projects-container">
             <h1 class="projects-heading">Projects</h1>
             <div class="project">
                 <img src="img/project1.png" alt="" />
