Projects section updated, started contact form section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,48 @@
                     </ul>
                 </div>
             </div>
+            <div class="project">
+                <img src="img/project1.png" alt="" />
+                <div class="project-info">
+                    <h2 class="project-title">Some Project</h2>
+                    <ul class="project-tags">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>PHP</li>
+                    </ul>
+                    <p>
+                        This is information about the project.
+                    </p>
+                    <ul class="project-links">
+                        <li><a href="#">Website</a></li>
+                        <li><a href="#">Github</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="project">
+                <img src="img/project1.png" alt="" />
+                <div class="project-info">
+                    <h2 class="project-title">Some Project</h2>
+                    <ul class="project-tags">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Javascript</li>
+                        <li>PHP</li>
+                    </ul>
+                    <p>
+                        This is information about the project.
+                    </p>
+                    <ul class="project-links">
+                        <li><a href="#">Website</a></li>
+                        <li><a href="#">Github</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div id="contact-form-container">
+            <h1 class="contact-form-heading">Contact Me</h1>
         </div>
 
         <footer>
