Finished most of the header, footer and About Me section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,300,700" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <title>Lasse Bjerre | Portfolio</title>
 </head>
 <body>
@@ -14,17 +15,19 @@
             <nav>
                 <ul class="nav-links">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#projects-container">Projects</a></li>
+                    <li><a href="#aboutme-container">Contact</a></li>
                 </ul>
                 <ul class="nav-social-icons">
-
+                    <li><a href="#"><i class="fa fa-github"></i></a></li>
+                    <li><a href="#"><i class="fa fa-steam"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                 </ul>
             </nav>
             <div class="header-feature">
-                <img src="img/logo.svg" />
-                <h2 class="feature-tagline">Some Awesome Text!</h2>
-                <h1 class="feature-heading">More and probably longer text</h1>
+                <img src="http://blog.lgb.dk/cache/lasse@lgb.dk.jpg" />
+                <h2 class="feature-tagline">Lasse Bjerre</h2>
+                <h1 class="feature-heading">Portfolio</h1>
             </div>
         </header>
 
@@ -89,12 +92,32 @@
             </div>
         </div>
 
-        <div id="contact-form-container">
-            <h1 class="contact-form-heading">Contact Me</h1>
+        <div id="aboutme-container">
+            <h1 class="aboutme-heading">About Me</h1>
+            <div class="technical col">
+                <h2>Technical</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, aliquam sem varius vestibulum interdum, aliquam mi dolore pede aliquet urna vitae. Consectetuer commodo nam orci mattis sed netus, nibh justo nec, id sodales, augue mauris magna, odio aliquam mattis. Sodales sit convallis hendrerit. Phasellus molestie posuere faucibus dictum mauris, donec eget consectetuer in, tellus lorem potenti sollicitudin pretium, donec quam varius non tincidunt elit mollis. Massa ac in ligula porttitor, vel mauris vestibulum elit mauris gravida vel, penatibus montes volutpat pharetra tincidunt praesent ut, elit lorem in eu. Non justo duis, in montes non ante conubia et wisi, sit lacus nunc orci maecenas quisque purus. Venenatis suspendisse, wisi ligula id iaculis enim est massa. Metus dictum per taciti vulputate dui nibh, quis nam. Integer aliquam, tellus at, sodales in et, sed vivamus amet massa.
+                </p>
+            </div>
+            <div class="non-technical col">
+                <h2>Non-Technical</h2>
+                <p>
+                    I am Lasse G. Bjerre, designer / developer and tech lover based in Aalborg, Denmark.
+I love technology and everything it brings with it, and I have developed a passion for it like no other over the years. Along with my passion for technology comes my passion to create. Getting an idea and making it come to life is something I value very highly.
+
+I create websites, media products and solve IT related problems. I very much see myself as a Jack of all trades.
+                </p>
+            </div>
         </div>
 
         <footer>
             <p class="copyright">Copyright 2015 &copy; Lasse Bjerre. All Rights Reserved</p>
+            <ul class="footer-social-icons">
+                <li><a href="#"><i class="fa fa-github"></i></a></li>
+                <li><a href="#"><i class="fa fa-steam"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            </ul>
         </footer>
     </div>
 </body>
