Began work on making site responsive, converted some css to mobile-first

--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
     <div class="main-container">
         <header>
+            <label for="show-menu" class="header-show-menu">Menu</label>
+			<input type="checkbox" id="show-menu" role="button">
             <nav>
                 <ul class="nav-links">
                     <li><a href="#">Home</a></li>
                     <li><a href="#projects-container">Projects</a></li>
-                    <li><a href="#aboutme-container">Contact</a></li>
+                    <li><a href="#aboutme-container">About Me</a></li>
                 </ul>
                 <ul class="nav-social-icons">
                     <li><a href="#"><i class="fa fa-github"></i></a></li>
