Moved most of the site to Flexbox for the responsive design, it's the furure, or so they say

--- a/index.html
+++ b/index.html
@@ -96,20 +96,22 @@
 
         <div id="aboutme-container">
             <h1 class="aboutme-heading">About Me</h1>
-            <div class="technical col">
-                <h2>Technical</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, aliquam sem varius vestibulum interdum, aliquam mi dolore pede aliquet urna vitae. Consectetuer commodo nam orci mattis sed netus, nibh justo nec, id sodales, augue mauris magna, odio aliquam mattis. Sodales sit convallis hendrerit. Phasellus molestie posuere faucibus dictum mauris, donec eget consectetuer in, tellus lorem potenti sollicitudin pretium, donec quam varius non tincidunt elit mollis. Massa ac in ligula porttitor, vel mauris vestibulum elit mauris gravida vel, penatibus montes volutpat pharetra tincidunt praesent ut, elit lorem in eu. Non justo duis, in montes non ante conubia et wisi, sit lacus nunc orci maecenas quisque purus. Venenatis suspendisse, wisi ligula id iaculis enim est massa. Metus dictum per taciti vulputate dui nibh, quis nam. Integer aliquam, tellus at, sodales in et, sed vivamus amet massa.
-                </p>
-            </div>
-            <div class="non-technical col">
-                <h2>Non-Technical</h2>
-                <p>
-                    I am Lasse G. Bjerre, designer / developer and tech lover based in Aalborg, Denmark.
-I love technology and everything it brings with it, and I have developed a passion for it like no other over the years. Along with my passion for technology comes my passion to create. Getting an idea and making it come to life is something I value very highly.
+            <div class="aboutme-content">
+                <div class="technical">
+                    <h2>Technical</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, aliquam sem varius vestibulum interdum, aliquam mi dolore pede aliquet urna vitae. Consectetuer commodo nam orci mattis sed netus, nibh justo nec, id sodales, augue mauris magna, odio aliquam mattis. Sodales sit convallis hendrerit. Phasellus molestie posuere faucibus dictum mauris, donec eget consectetuer in, tellus lorem potenti sollicitudin pretium, donec quam varius non tincidunt elit mollis. Massa ac in ligula porttitor, vel mauris vestibulum elit mauris gravida vel, penatibus montes volutpat pharetra tincidunt praesent ut, elit lorem in eu. Non justo duis, in montes non ante conubia et wisi, sit lacus nunc orci maecenas quisque purus. Venenatis suspendisse, wisi ligula id iaculis enim est massa. Metus dictum per taciti vulputate dui nibh, quis nam. Integer aliquam, tellus at, sodales in et, sed vivamus amet massa.
+                    </p>
+                </div>
+                <div class="non-technical">
+                    <h2>Non-Technical</h2>
+                    <p>
+                        I am Lasse G. Bjerre, designer / developer and tech lover based in Aalborg, Denmark.
+    I love technology and everything it brings with it, and I have developed a passion for it like no other over the years. Along with my passion for technology comes my passion to create. Getting an idea and making it come to life is something I value very highly.
 
-I create websites, media products and solve IT related problems. I very much see myself as a Jack of all trades.
-                </p>
+    I create websites, media products and solve IT related problems. I very much see myself as a Jack of all trades.
+                    </p>
+                </div>
             </div>
         </div>
 
