Fixed text overflow in the Project descriptions

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div id="projects-container">
             <h1 class="projects-heading">Projects</h1>
             <div class="project">
-                <img src="img/project1.png" alt="" />
+                <img src="img/rpidoorbell.png" alt="" />
                 <div class="project-info">
-                    <h2 class="project-title">Some Project</h2>
+                    <h2 class="project-title">Raspberry Pi Doorbell</h2>
                     <ul class="project-tags">
                         <li>HTML</li>
                         <li>CSS</li>
@@ -46,7 +46,9 @@
                         <li>PHP</li>
                     </ul>
                     <p>
-                        This is information about the project.
+                        The Raspberry Pi doorbell was a fun little side project I did. The doorbell in our house is too far away for me to hear it when I am in my room, so I thought it would be cool to get a notification on my smartphone when someone was at the door.
+
+                        The hardware was done with some very simple soldering and a couple of wires. For the software I used Python.
                     </p>
                     <ul class="project-links">
                         <li><a href="#">Website</a></li>
@@ -55,9 +57,9 @@
                 </div>
             </div>
             <div class="project">
-                <img src="img/project1.png" alt="" />
+                <img src="img/rpidoorbell.png" alt="" />
                 <div class="project-info">
-                    <h2 class="project-title">Some Project</h2>
+                    <h2 class="project-title">Raspberry Pi Doorbell</h2>
                     <ul class="project-tags">
                         <li>HTML</li>
                         <li>CSS</li>
@@ -65,7 +67,9 @@
                         <li>PHP</li>
                     </ul>
                     <p>
-                        This is information about the project.
+                        The Raspberry Pi doorbell was a fun little side project I did. The doorbell in our house is too far away for me to hear it when I am in my room, so I thought it would be cool to get a notification on my smartphone when someone was at the door.
+
+                        The hardware was done with some very simple soldering and a couple of wires. For the software I used Python.
                     </p>
                     <ul class="project-links">
                         <li><a href="#">Website</a></li>
@@ -74,9 +78,9 @@
                 </div>
             </div>
             <div class="project">
-                <img src="img/project1.png" alt="" />
+                <img src="img/rpidoorbell.png" alt="" />
                 <div class="project-info">
-                    <h2 class="project-title">Some Project</h2>
+                    <h2 class="project-title">Raspberry Pi Doorbell</h2>
                     <ul class="project-tags">
                         <li>HTML</li>
                         <li>CSS</li>
@@ -84,7 +88,9 @@
                         <li>PHP</li>
                     </ul>
                     <p>
-                        This is information about the project.
+                        The Raspberry Pi doorbell was a fun little side project I did. The doorbell in our house is too far away for me to hear it when I am in my room, so I thought it would be cool to get a notification on my smartphone when someone was at the door.
+
+                        The hardware was done with some very simple soldering and a couple of wires. For the software I used Python.
                     </p>
                     <ul class="project-links">
                         <li><a href="#">Website</a></li>
