Header and header-feature is now flexbox too. Added more projects and pictures.

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#projects-container">Projects</a></li>
                     <li><a href="#aboutme-container">About Me</a></li>
+                    <li><a href="http://blog.lgb.dk">Blog</a></li>
                 </ul>
                 <ul class="nav-social-icons">
-                    <li><a href="#"><i class="fa fa-github"></i></a></li>
-                    <li><a href="#"><i class="fa fa-steam"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://github.com/Ordspilleren"><i class="fa fa-github"></i></a></li>
+                    <li><a href="http://steamcommunity.com/id/lgb/"><i class="fa fa-steam"></i></a></li>
+                    <li><a href="https://twitter.com/Ordspilleren"><i class="fa fa-twitter"></i></a></li>
                 </ul>
             </nav>
             <div class="header-feature">
@@ -52,49 +53,45 @@
                     </p>
                     <ul class="project-links">
                         <li><a href="#">Website</a></li>
-                        <li><a href="#">Github</a></li>
+                        <li><a href="#"><i class="fa fa-github"></i> Github</a></li>
                     </ul>
                 </div>
             </div>
             <div class="project">
-                <img src="img/rpidoorbell.png" alt="" />
+                <img src="img/eventit.png" alt="" />
                 <div class="project-info">
-                    <h2 class="project-title">Raspberry Pi Doorbell</h2>
+                    <h2 class="project-title">Crowdsourced Event System</h2>
                     <ul class="project-tags">
                         <li>HTML</li>
                         <li>CSS</li>
-                        <li>Javascript</li>
+                        <li>Bootstrap</li>
                         <li>PHP</li>
                     </ul>
                     <p>
-                        The Raspberry Pi doorbell was a fun little side project I did. The doorbell in our house is too far away for me to hear it when I am in my room, so I thought it would be cool to get a notification on my smartphone when someone was at the door.
-
-                        The hardware was done with some very simple soldering and a couple of wires. For the software I used Python.
+                        A semester project called "Event it". The goal was to create a crowdsourced event system that would allow citizens of Aalborg to keep in touch with upcoming events.
                     </p>
                     <ul class="project-links">
                         <li><a href="#">Website</a></li>
-                        <li><a href="#">Github</a></li>
+                        <li><a href="#"><i class="fa fa-github"></i> Github</a></li>
                     </ul>
                 </div>
             </div>
             <div class="project">
-                <img src="img/rpidoorbell.png" alt="" />
+                <img src="img/xencoder.png" alt="" />
                 <div class="project-info">
-                    <h2 class="project-title">Raspberry Pi Doorbell</h2>
+                    <h2 class="project-title">Xencoder</h2>
                     <ul class="project-tags">
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Javascript</li>
-                        <li>PHP</li>
+                        <li>C#</li>
+                        <li>FFmpeg</li>
                     </ul>
                     <p>
-                        The Raspberry Pi doorbell was a fun little side project I did. The doorbell in our house is too far away for me to hear it when I am in my room, so I thought it would be cool to get a notification on my smartphone when someone was at the door.
+                        Xencoder is another side project of mine. I needed a simple application to convert video files into a format that could be used for Youtube, but I could not find one that was simple enough for my needs, so I made one.
 
-                        The hardware was done with some very simple soldering and a couple of wires. For the software I used Python.
+                        The application itself is written in C#. It uses the FFmpeg framework for the encoding of the video.
                     </p>
                     <ul class="project-links">
                         <li><a href="#">Website</a></li>
-                        <li><a href="#">Github</a></li>
+                        <li><a href="#"><i class="fa fa-github"></i> Github</a></li>
                     </ul>
                 </div>
             </div>
