--- a/index.html
+++ b/index.html
@@ -118,14 +118,15 @@
             </div>
         </div>
 
-        <footer>
-            <p class="copyright">Copyright 2015 &copy; Lasse Bjerre. All Rights Reserved</p>
-            <ul class="footer-social-icons">
-                <li><a href="#"><i class="fa fa-github"></i></a></li>
-                <li><a href="#"><i class="fa fa-steam"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            </ul>
-        </footer>
+
     </div>
+    <footer class="main-container">
+        <p class="copyright">Copyright 2015 &copy; Lasse Bjerre. All Rights Reserved</p>
+        <ul class="footer-social-icons">
+            <li><a href="#"><i class="fa fa-github"></i></a></li>
+            <li><a href="#"><i class="fa fa-steam"></i></a></li>
+            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+        </ul>
+    </footer>
 </body>
 </html>
