Fixed responsive images in projects, cleaned up some code and added more descriptive HTML tags

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <li><a href="https://github.com/Ordspilleren"><i class="fa fa-github"></i></a></li>
                     <li><a href="http://steamcommunity.com/id/lgb/"><i class="fa fa-steam"></i></a></li>
                     <li><a href="https://twitter.com/Ordspilleren"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://dk.linkedin.com/in/lasse-bjerre-93294896"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
             </nav>
             <div class="header-feature">
@@ -34,12 +35,12 @@
             </div>
         </header>
 
-        <div id="projects-container">
-            <h1 class="projects-heading">Projects</h1>
-            <div class="project">
-                <img src="img/rpidoorbell.png" alt="" />
+        <section id="projects-container">
+            <h1>Projects</h1>
+            <article class="project">
+                <div><img src="img/rpidoorbell.png" alt="" /></div>
                 <div class="project-info">
-                    <h2 class="project-title">Raspberry Pi Doorbell</h2>
+                    <h2>Raspberry Pi Doorbell</h2>
                     <ul class="project-tags">
                         <li>HTML</li>
                         <li>CSS</li>
@@ -52,15 +53,14 @@
                         The hardware was done with some very simple soldering and a couple of wires. For the software I used Python.
                     </p>
                     <ul class="project-links">
-                        <li><a href="#">Website</a></li>
-                        <li><a href="#"><i class="fa fa-github"></i> Github</a></li>
+                        <li><a href="http://blog.lgb.dk/raspberry-pi-smartphone-doorbell"><i class="fa fa-rss-square"></i> Blog post</a></li>
                     </ul>
                 </div>
-            </div>
-            <div class="project">
-                <img src="img/eventit.png" alt="" />
+            </article>
+            <article class="project">
+                <div><img src="img/eventit.png" alt="" /></div>
                 <div class="project-info">
-                    <h2 class="project-title">Crowdsourced Event System</h2>
+                    <h2>Crowdsourced Event System</h2>
                     <ul class="project-tags">
                         <li>HTML</li>
                         <li>CSS</li>
@@ -71,15 +71,14 @@
                         A semester project called "Event it". The goal was to create a crowdsourced event system that would allow citizens of Aalborg to keep in touch with upcoming events.
                     </p>
                     <ul class="project-links">
-                        <li><a href="#">Website</a></li>
-                        <li><a href="#"><i class="fa fa-github"></i> Github</a></li>
+                        <li><a href="https://github.com/Ordspilleren/AalborgEvents"><i class="fa fa-github"></i> Github</a></li>
                     </ul>
                 </div>
-            </div>
-            <div class="project">
-                <img src="img/xencoder.png" alt="" />
+            </article>
+            <article class="project">
+                <div><img src="img/xencoder.png" alt="" /></div>
                 <div class="project-info">
-                    <h2 class="project-title">Xencoder</h2>
+                    <h2>Xencoder</h2>
                     <ul class="project-tags">
                         <li>C#</li>
                         <li>FFmpeg</li>
@@ -94,17 +93,28 @@
                         <li><a href="#"><i class="fa fa-github"></i> Github</a></li>
                     </ul>
                 </div>
-            </div>
-        </div>
+            </article>
+        </section>
 
-        <div id="aboutme-container">
-            <h1 class="aboutme-heading">About Me</h1>
+        <section id="aboutme-container">
+            <h1>About Me</h1>
             <div class="aboutme-content">
                 <div class="technical">
                     <h2>Technical</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, aliquam sem varius vestibulum interdum, aliquam mi dolore pede aliquet urna vitae. Consectetuer commodo nam orci mattis sed netus, nibh justo nec, id sodales, augue mauris magna, odio aliquam mattis. Sodales sit convallis hendrerit. Phasellus molestie posuere faucibus dictum mauris, donec eget consectetuer in, tellus lorem potenti sollicitudin pretium, donec quam varius non tincidunt elit mollis. Massa ac in ligula porttitor, vel mauris vestibulum elit mauris gravida vel, penatibus montes volutpat pharetra tincidunt praesent ut, elit lorem in eu. Non justo duis, in montes non ante conubia et wisi, sit lacus nunc orci maecenas quisque purus. Venenatis suspendisse, wisi ligula id iaculis enim est massa. Metus dictum per taciti vulputate dui nibh, quis nam. Integer aliquam, tellus at, sodales in et, sed vivamus amet massa.
+                        I first started my coding adventure in 2007 with a simple website, and since then both my skills and interests have developed. These days, it's not only coding, but also hardware, networking and other IT related projects.
                     </p>
+                    <p><a href="">Download Résumé (PDF)</a></p>
+                    <p><span>Relevant Skills:</span></p>
+                    <ul>
+                        <li>HTML / CSS</li>
+                        <li>Javascript</li>
+                        <li>PHP</li>
+                        <li>C#</li>
+                        <li>Photoshop</li>
+                        <li>Sony Vegas</li>
+                        <li>Linux</li>
+                    </ul>
                 </div>
                 <div class="non-technical">
                     <h2>Non-Technical</h2>
@@ -116,16 +126,17 @@
                     </p>
                 </div>
             </div>
-        </div>
+        </section>
 
 
     </div>
     <footer class="main-container">
         <p class="copyright">Copyright 2015 &copy; Lasse Bjerre. All Rights Reserved</p>
         <ul class="footer-social-icons">
-            <li><a href="#"><i class="fa fa-github"></i></a></li>
-            <li><a href="#"><i class="fa fa-steam"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://github.com/Ordspilleren"><i class="fa fa-github"></i></a></li>
+            <li><a href="http://steamcommunity.com/id/lgb/"><i class="fa fa-steam"></i></a></li>
+            <li><a href="https://twitter.com/Ordspilleren"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://dk.linkedin.com/in/lasse-bjerre-93294896"><i class="fa fa-linkedin"></i></a></li>
         </ul>
     </footer>
 </body>
