Changed header image a bit, fixed some links

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <p>
                         I first started my coding adventure in 2007 with a simple website, and since then both my skills and interests have developed. These days, it's not only coding, but also hardware, networking and other IT related projects.
                     </p>
-                    <p><a href="">Download Résumé (PDF)</a></p>
+                    <!--<p><a href="">Download Résumé (PDF)</a></p>-->
                     <p><span>Relevant Skills:</span></p>
                     <ul>
                         <li>HTML / CSS</li>
