Added header profile image locally so SSL doesn't complain

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </ul>
             </nav>
             <div class="header-feature">
-                <img src="http://blog.lgb.dk/cache/lasse@lgb.dk.jpg" />
+                <img src="img/profile.jpg" />
                 <h2 class="feature-tagline">Lasse Bjerre</h2>
                 <h1 class="feature-heading">Portfolio</h1>
             </div>
