Added mail icon in header and mail address in about me section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <li><a href="http://steamcommunity.com/id/lgb/"><i class="fa fa-steam"></i></a></li>
                     <li><a href="https://twitter.com/Ordspilleren"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="https://dk.linkedin.com/in/lasse-bjerre-93294896"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="mailto:lasse@lgb.dk"><i class="fa fa-envelope"></i></a></li>
                 </ul>
             </nav>
             <div class="header-feature">
@@ -120,10 +121,11 @@
                     <h2>Non-Technical</h2>
                     <p>
                         I am Lasse G. Bjerre, designer / developer and tech lover based in Aalborg, Denmark.
-    I love technology and everything it brings with it, and I have developed a passion for it like no other over the years. Along with my passion for technology comes my passion to create. Getting an idea and making it come to life is something I value very highly.
+                        I love technology and everything it brings with it, and I have developed a passion for it like no other over the years. Along with my passion for technology comes my passion to create. Getting an idea and making it come to life is something I value very highly.
 
-    I create websites, media products and solve IT related problems. I very much see myself as a Jack of all trades.
+                        I create websites, media products and solve IT related problems. I very much see myself as a Jack of all trades.
                     </p>
+                    <p>You can reach me at: <a href="mailto:lasse@lgb.dk">lasse@lgb.dk</a></p>
                 </div>
             </div>
         </section>
@@ -131,12 +133,13 @@
 
     </div>
     <footer class="main-container">
-        <p class="copyright">Copyright 2015 &copy; Lasse Bjerre. All Rights Reserved</p>
+        <p class="copyright">&copy; 2015 Lasse Bjerre. All Rights Reserved.</p>
         <ul class="footer-social-icons">
             <li><a href="https://github.com/Ordspilleren"><i class="fa fa-github"></i></a></li>
             <li><a href="http://steamcommunity.com/id/lgb/"><i class="fa fa-steam"></i></a></li>
             <li><a href="https://twitter.com/Ordspilleren"><i class="fa fa-twitter"></i></a></li>
             <li><a href="https://dk.linkedin.com/in/lasse-bjerre-93294896"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="mailto:lasse@lgb.dk"><i class="fa fa-envelope"></i></a></li>
         </ul>
     </footer>
 </body>
