Added new project and removed bottom padding on the projects section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,23 @@
                 </div>
             </article>
             <article class="project">
+                <div><img src="img/livestreamerspotlight.png" alt="" /></div>
+                <div class="project-info">
+                    <h2>Livestreamer Spotlight</h2>
+                    <ul class="project-tags">
+                        <li>C#</li>
+                    </ul>
+                    <p>
+                        Livestreamer Spotlight is an application I created out of my own fustration with other similar offerings. It allows you to watch streams from popular sites such as Twitch.tv and Hitbox.tv in your favorite video player.
+
+                        The application was made with C#, with a frontend made in .NET's WPF. The intend is to eventually make the application cross-platform.
+                    </p>
+                    <ul class="project-links">
+                        <li><a href="https://github.com/Ordspilleren/LivestreamerSpotlight"><i class="fa fa-github"></i> Github</a></li>
+                    </ul>
+                </div>
+            </article>
+            <article class="project">
                 <div><img src="img/xencoder.png" alt="" /></div>
                 <div class="project-info">
                     <h2>Xencoder</h2>
